[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harbortui"
description = 'TUI for the Harbor API'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "pederhan", email = "pederhan@uio.no" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "harborapi @ git+https://github.com/pederhan/harborapi@ext",
  "textual",
  "pydantic",
  "appdirs",
  "tomli",
  "rich",
  "loguru",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/pederhan/harbortui#readme"
Issues = "https://github.com/pederhan/harbortui/issues"
Source = "https://github.com/pederhan/harbortui"

[tool.hatch.version]
path = "harbortui/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov", "mypy", "black"]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=harbortui --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["harbortui/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
